--- a/joint/app_server/views/user.ejs
+++ b/joint/app_server/views/user.ejs
@@ -4,32 +4,33 @@
     <div class="container">
       <div class="row ">
 
-               
+        <div class="panel panel-info">
+
+          <div class="panel-heading">
+          
+            <div class="panel-title">Kayıt Ekranı</div>
+          
+          </div>
+          
+        <div class="panel-body">
+         
+          <form>
+            <div style="margin-bottom: 25px;" class="input-group">
+              <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+              <input id="login-username" type="text" class="from-control" name="Username" placeholder="Kullanıcı Adı">
+            </div>
+          </form>
+         
+    
+          </div>
+        
+          <div class="panel-footer">
+        
+          </div>
+        
+        </div>            
 
       </div>
     </div>
     
-    <div class="panel panel-info">
-
-      <div class="panel-heading">
-      
-        <div class="panel-title">Kayıt Ekranı</div>
-      
-      </div>
-      
-    <div class="panel-body">
-     
-     
-
-      </div>
     
-      <div class="panel-footer">
-    
-      </div>
-    
-    </div> 
-
-    <label>İsim</label>
-     <input type="text" id="fname" name="fname" ><br>
-     <label>Soyim</label>
-     <input type="text" id="fname" name="fname" ><br>
