--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,9 @@
     background-color: blue;
     margin: 1px;
 }
+.loginPanel{
+    width: 320px;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+}
